cmake_minimum_required(VERSION 3.17)
find_package(eclipse-paho-mqtt-c 1.3.9 REQUIRED)
project(mqtt_c C)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
set(CMAKE_C_STANDARD 99)
add_executable(mqtt_c main.c)
target_link_libraries(mqtt_c paho-mqtt3c)
add_executable(emqx_file_transfer emqx_file_transfer.c)
target_link_libraries(emqx_file_transfer paho-mqtt3c)
add_executable(mqtt_tls_c main_tls.c)
target_link_libraries(mqtt_tls_c paho-mqtt3cs)
